[Feat]: 사용자 정보 수정, 추천 에기, 일지 요약 API 구현
- 사용자 정보 업데이트 기능 추가
- 추천 에기 리스트 출력 API 추가
- 낚시 일지 요약 및 통계 기능 구현
- API 명세서 업데이트
